--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	
-<!-- Mirrored from websmirno.site/childit/about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Oct 2025 11:30:34 GMT -->
 <head>
 		<title>Child IT</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -176,11 +175,11 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="top-line">
-							<a href="index-2.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
+							<a href="index.html" class="logo"><img src="img/logoo.svg" alt="logo" style="width: 100px; height: 100px; margin-inline-start: 1px;"></a>
 							<nav class="main-nav">
 								<ul class="main-nav-list">
 									<li>
-										<a href="index-2.html">Home</a>
+										<a href="index.html">Home</a>
 									</li>
 									<li>
 										<a href="about-us.html" class="active-link">About Us</a>
@@ -327,7 +326,7 @@
 								<li>
 									<div class="statement-card">
 										<div class="statement-ico">
-											<img src="img/lazy.png" class="lazy" data-src="img/paper.svg" alt="img">
+											<img src="img/lazy.png" class="lazy" data-src="img/send-fill.svg" alt="img">
 										</div>
 										<h4>Our Mission</h4>
 										<p>We believe in the ability to improve the quality of life of the individuals and families across the city.</p>
@@ -486,13 +485,13 @@
 													<div class="teacher-card__info">
 														<h5>Jamey</h5>
 														<p class="main-color-font">Toddler Classroom</p>
-														<p>Born seventh in a family of ten children, Jamey has been surrounded by young children all of her life. Combined with her extraordinary teaching skills and warm, nurturing personality, she has created truly excellent and welcoming our ChildIt centre.</p>
+														<p>Born seventh in a family of ten children, Jamey has been surrounded by young children all of her life. Combined with her extraordinary teaching skills and warm, nurturing personality, she has created truly excellent and welcoming our Brenitoch centre.</p>
 														<ul class="soc-link soc-link__bg">
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -518,7 +517,7 @@
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -544,7 +543,7 @@
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -570,7 +569,7 @@
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -600,7 +599,7 @@
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -620,13 +619,13 @@
 													<div class="teacher-card__info">
 														<h5>Jamey</h5>
 														<p class="main-color-font">Toddler Classroom</p>
-														<p>Born seventh in a family of ten children, Jamey has been surrounded by young children all of her life. Combined with her extraordinary teaching skills and warm, nurturing personality, she has created truly excellent and welcoming our ChildIt centre.</p>
+														<p>Born seventh in a family of ten children, Jamey has been surrounded by young children all of her life. Combined with her extraordinary teaching skills and warm, nurturing personality, she has created truly excellent and welcoming our Brenitoch centre.</p>
 														<ul class="soc-link soc-link__bg">
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -652,7 +651,7 @@
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -678,7 +677,7 @@
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -708,7 +707,7 @@
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -734,7 +733,7 @@
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -754,13 +753,13 @@
 													<div class="teacher-card__info">
 														<h5>Jamey</h5>
 														<p class="main-color-font">Toddler Classroom</p>
-														<p>Born seventh in a family of ten children, Jamey has been surrounded by young children all of her life. Combined with her extraordinary teaching skills and warm, nurturing personality, she has created truly excellent and welcoming our ChildIt centre.</p>
+														<p>Born seventh in a family of ten children, Jamey has been surrounded by young children all of her life. Combined with her extraordinary teaching skills and warm, nurturing personality, she has created truly excellent and welcoming our Brenitoch centre.</p>
 														<ul class="soc-link soc-link__bg">
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -786,7 +785,7 @@
 																<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 															</a></li>
 															<li><a href="#">
-																<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+																<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 															</a></li>
 															<li><a href="#">
 																<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -849,7 +848,7 @@
 					<div class="row">
 						<div class="col-md-12 col-lg-4">
 							<div class="f-subscribe">
-								<a href="index-2.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
+								<a href="index.html" class="logo"><img src="img/logoo.svg" alt="logo" style="width: 100px; height: 100px;"></a>
 								<p>Our experienced team strives to offer a creative and engaging environment and the opportunity for children to learn, grow, and thrive.</p>
 								<form action="#" class="signup-form" id="newsletterForm">
 									<input type="text" name="email" class="signup" placeholder="Newsletter signup">
@@ -895,7 +894,7 @@
 					<div class="row">
 						<div class="col-lg-12">
 							<div class="footer-bottom">
-								<p>&copy; 2024 <a href="#">ChildiT.</a> All Rights Reserved. <a href="#">Privacy Policy</a></p>
+								<p>&copy; 2024 <a href="#">Brenitoch.</a> All Rights Reserved. <a href="#">Privacy Policy</a></p>
 								<div class="soc-link-wrap">
 									<p>Follow us:</p>
 									<ul class="soc-link">
@@ -903,7 +902,7 @@
 											<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 										</a></li>
 										<li><a href="#">
-											<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+											<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 										</a></li>
 										<li><a href="#">
 											<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -948,5 +947,4 @@
 		<script src="form/forms.js"></script>
 	</body>
 
-<!-- Mirrored from websmirno.site/childit/about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Oct 2025 11:30:34 GMT -->
 </html>
