--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	
-<!-- Mirrored from websmirno.site/childit/contacts.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Oct 2025 11:30:57 GMT -->
 <head>
 		<title>Child IT</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -176,11 +175,11 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="top-line">
-							<a href="index-2.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
+							<a href="index.html" class="logo"><img src="img/logoo.svg" alt="logo" style="width: 100px; height: 100px;"></a>
 							<nav class="main-nav">
 								<ul class="main-nav-list">
 									<li>
-										<a href="index-2.html">Home</a>
+										<a href="index.html">Home</a>
 									</li>
 									<li>
 										<a href="about-us.html">About Us</a>
@@ -293,7 +292,7 @@
 						</div>
 						<div class="col-lg-6 mb-xs-20 mb-md-60">
 							<h2>Get In Touch</h2>
-							<p class="mb-xs-10 mb-lg-20">Each year, we have many fun ChildIt Family events scheduled simultaneously in all of our centres. In addition, each ChildIt location has its own unique events.</p>
+							<p class="mb-xs-10 mb-lg-20">Each year, we have many fun Brenitoch Family events scheduled simultaneously in all of our centres. In addition, each Brenitoch location has its own unique events.</p>
 							<!-- Begin main-form -->
 							<form action="#" class="main-form" id="contactForm"  method="post">
 								<div class="successform">
@@ -335,7 +334,7 @@
 					<div class="row">
 						<div class="col-md-12 col-lg-4">
 							<div class="f-subscribe">
-								<a href="index-2.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
+								<a href="index.html" class="logo"><img src="img/logoo.svg" alt="logo" style="width: 100px; height: 100px;"></a>
 								<p>Our experienced team strives to offer a creative and engaging environment and the opportunity for children to learn, grow, and thrive.</p>
 								<form action="#" class="signup-form" id="newsletterForm">
 									<input type="text" name="email" class="signup" placeholder="Newsletter signup">
@@ -381,7 +380,7 @@
 					<div class="row">
 						<div class="col-lg-12">
 							<div class="footer-bottom">
-								<p>&copy; 2024 <a href="#">ChildiT.</a> All Rights Reserved. <a href="#">Privacy Policy</a></p>
+								<p>&copy; 2024 <a href="#">Brenitoch.</a> All Rights Reserved. <a href="#">Privacy Policy</a></p>
 								<div class="soc-link-wrap">
 									<p>Follow us:</p>
 									<ul class="soc-link">
@@ -389,7 +388,7 @@
 											<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 										</a></li>
 										<li><a href="#">
-											<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+											<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 										</a></li>
 										<li><a href="#">
 											<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -434,5 +433,4 @@
 		<script src="form/forms.js"></script>
 	</body>
 
-<!-- Mirrored from websmirno.site/childit/contacts.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Oct 2025 11:30:57 GMT -->
 </html>
