--- a/single-event.html
+++ b/single-event.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	
-<!-- Mirrored from websmirno.site/childit/single-event.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Oct 2025 11:30:43 GMT -->
 <head>
 		<title>Child IT</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -176,11 +175,11 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="top-line">
-							<a href="index-2.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
+							<a href="index.html" class="logo"><img src="img/logoo.svg" alt="logo" style="width: 100px; height: 100px;"></a>
 							<nav class="main-nav">
 								<ul class="main-nav-list">
 									<li>
-										<a href="index-2.html">Home</a>
+										<a href="index.html">Home</a>
 									</li>
 									<li>
 										<a href="about-us.html">About Us</a>
@@ -374,7 +373,7 @@
 					<div class="row">
 						<div class="col-md-12 col-lg-4">
 							<div class="f-subscribe">
-								<a href="index-2.html" class="logo"><img src="img/logo.svg" alt="logo"></a>
+								<a href="index.html" class="logo"><img src="img/logoo.svg" alt="logo" style="width: 100px; height: 100px;"></a>
 								<p>Our experienced team strives to offer a creative and engaging environment and the opportunity for children to learn, grow, and thrive.</p>
 								<form action="#" class="signup-form" id="newsletterForm">
 									<input type="text" name="email" class="signup" placeholder="Newsletter signup">
@@ -420,7 +419,7 @@
 					<div class="row">
 						<div class="col-lg-12">
 							<div class="footer-bottom">
-								<p>&copy; 2024 <a href="#">ChildiT.</a> All Rights Reserved. <a href="#">Privacy Policy</a></p>
+								<p>&copy; 2024 <a href="#">Brenitoch.</a> All Rights Reserved. <a href="#">Privacy Policy</a></p>
 								<div class="soc-link-wrap">
 									<p>Follow us:</p>
 									<ul class="soc-link">
@@ -428,7 +427,7 @@
 											<img src="img/lazy.png" class="lazy" data-src='img/facebook.svg' title='Facebook' alt="facebook">
 										</a></li>
 										<li><a href="#">
-											<img src="img/lazy.png" class="lazy" data-src='img/twitter.svg' title='Twitter' alt="twitter">
+											<img src="img/lazy.png" class="lazy" data-src='img/twitter-x.svg' title='Twitter' alt="twitter">
 										</a></li>
 										<li><a href="#">
 											<img src="img/lazy.png" class="lazy" data-src='img/instagram.svg' title='Instagram' alt="nstagram">
@@ -473,5 +472,4 @@
 		<script src="form/forms.js"></script>
 	</body>
 
-<!-- Mirrored from websmirno.site/childit/single-event.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Oct 2025 11:30:43 GMT -->
 </html>
