--- a/index.html
+++ b/index.html
@@ -87,9 +87,39 @@
 		<section id="hero" class="hero section dark-background">
 
 			<div class="hero-container">
-				<video autoplay="" muted="" loop="" playsinline="" class="video-background">
-					<source src="assets/img/education/video-2.mp4" type="video/mp4">
-				</video>
+				<div class="swiper init-swiper video-background">
+					<script type="application/json" class="swiper-config">
+        {
+          "loop": true,
+          "speed": 600,
+          "autoplay": {
+            "delay": 3000,
+            "disableOnInteraction": false
+          },
+          "slidesPerView": 1,
+          "pagination": {
+            "el": ".swiper-pagination",
+            "type": "bullets",
+            "clickable": true
+          }
+        }
+      </script>
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img src="assets/img/education/education-1.webp" alt="Slide 1" class="img-fluid"
+								style="width: 100%; height: 100%; object-fit: cover;">
+						</div>
+						<div class="swiper-slide">
+							<img src="assets/img/education/education-2.webp" alt="Slide 2" class="img-fluid"
+								style="width: 100%; height: 100%; object-fit: cover;">
+						</div>
+						<div class="swiper-slide">
+							<img src="assets/img/education/education-3.webp" alt="Slide 3" class="img-fluid"
+								style="width: 100%; height: 100%; object-fit: cover;">
+						</div>
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="row align-items-center">
@@ -175,7 +205,9 @@
 				</div>
 			</div>
 
-		</section><!-- /Hero Section -->
+		</section>
+
+		<!-- /Hero Section -->
 
 		<!-- About Section -->
 		<section id="about" class="about section">
