name justification - stephen

--- a/academics.html
+++ b/academics.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Academics - Breinitoch Schools</title>
-  <meta name="description" content="Explore the academic programs at Breinitoch Schools, offering comprehensive education from Preschool to High School, including specialized Learning Support.">
-  <meta name="keywords" content="Breinitoch Schools, academics, preschool, elementary, middle school, high school, learning support">
+  <title>Academics - Brenitoch Schools</title>
+  <meta name="description" content="Explore the academic programs at Brenitoch Schools, offering comprehensive education from Preschool to High School, including specialized Learning Support.">
+  <meta name="keywords" content="Brenitoch Schools, academics, preschool, elementary, middle school, high school, learning support">
 
   <!-- Favicons -->
   <link href="assets/img/logoo.png" rel="icon">
@@ -78,7 +78,7 @@
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
         <h1>Academics</h1>
-        <p>Explore our diverse academic programs designed to foster curiosity, critical thinking, and lifelong learning at Breinitoch Schools.</p>
+        <p>Explore our diverse academic programs designed to foster curiosity, critical thinking, and lifelong learning at Brenitoch Schools.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -104,7 +104,7 @@
                 <span class="subtitle">Excellence in Education</span>
                 <h2>Discover Our Academic Programs</h2>
                 <p class="intro-text">
-                  At Breinitoch Schools, our academic programs are crafted to nurture intellectual curiosity, foster collaboration, and prepare students for a dynamic world. From Preschool to High School, our curriculum emphasizes holistic development, critical thinking, and global citizenship, supported by dedicated faculty and innovative resources.
+                  At Brenitoch Schools, our academic programs are crafted to nurture intellectual curiosity, foster collaboration, and prepare students for a dynamic world. From Preschool to High School, our curriculum emphasizes holistic development, critical thinking, and global citizenship, supported by dedicated faculty and innovative resources.
                 </p>
                 <div class="key-highlights">
                   <div class="highlight-item">
@@ -270,7 +270,7 @@
                     <img src="assets/img/education/activities-4.webp" alt="Preschool" class="img-fluid rounded">
                   </div>
                   <div class="col-md-6">
-                    <p>Our Preschool program at Breinitoch Schools introduces young learners to a world of discovery through play-based learning. Designed for ages 3-5, the curriculum emphasizes creativity, social skills, and foundational literacy and numeracy, fostering a love for learning in a nurturing environment.</p>
+                    <p>Our Preschool program at Brenitoch Schools introduces young learners to a world of discovery through play-based learning. Designed for ages 3-5, the curriculum emphasizes creativity, social skills, and foundational literacy and numeracy, fostering a love for learning in a nurturing environment.</p>
                     <ul>
                       <li>Focus on early literacy and numeracy</li>
                       <li>Creative arts and play-based activities</li>
@@ -300,7 +300,7 @@
                     <img src="assets/img/education/activities-4.webp" alt="Elementary School" class="img-fluid rounded">
                   </div>
                   <div class="col-md-6">
-                    <p>The Elementary School program at Breinitoch Schools (ages 5-11) builds a strong academic foundation through an engaging curriculum that integrates science, math, language arts, and social studies. Our hands-on approach encourages critical thinking and collaboration.</p>
+                    <p>The Elementary School program at Brenitoch Schools (ages 5-11) builds a strong academic foundation through an engaging curriculum that integrates science, math, language arts, and social studies. Our hands-on approach encourages critical thinking and collaboration.</p>
                     <ul>
                       <li>Core subjects with project-based learning</li>
                       <li>Emphasis on teamwork and communication</li>
@@ -330,7 +330,7 @@
                     <img src="assets/img/education/activities-10.webp" alt="Middle School" class="img-fluid rounded">
                   </div>
                   <div class="col-md-6">
-                    <p>Breinitoch Schools’ Middle School program (ages 11-14) fosters independence and intellectual curiosity through interdisciplinary studies. Students explore advanced subjects, participate in leadership activities, and develop skills for academic and personal success.</p>
+                    <p>Brenitoch Schools’ Middle School program (ages 11-14) fosters independence and intellectual curiosity through interdisciplinary studies. Students explore advanced subjects, participate in leadership activities, and develop skills for academic and personal success.</p>
                     <ul>
                       <li>Advanced coursework in STEM and humanities</li>
                       <li>Leadership and community service opportunities</li>
@@ -360,7 +360,7 @@
                     <img src="assets/img/education/activities-2.webp" alt="High School" class="img-fluid rounded">
                   </div>
                   <div class="col-md-6">
-                    <p>Our High School program (ages 14-18) at Breinitoch Schools prepares students for higher education and global challenges with a rigorous college-preparatory curriculum, advanced placement courses, and opportunities for leadership and global engagement.</p>
+                    <p>Our High School program (ages 14-18) at Brenitoch Schools prepares students for higher education and global challenges with a rigorous college-preparatory curriculum, advanced placement courses, and opportunities for leadership and global engagement.</p>
                     <ul>
                       <li>College-preparatory and AP courses</li>
                       <li>Career and college counseling</li>
@@ -390,7 +390,7 @@
                     <img src="assets/img/education/activity-12.webp" alt="Learning Support" class="img-fluid rounded">
                   </div>
                   <div class="col-md-6">
-                    <p>The Learning Support program at Breinitoch Schools offers personalized academic and emotional support for students of all ages, ensuring every learner achieves their full potential through tailored strategies and dedicated resources.</p>
+                    <p>The Learning Support program at Brenitoch Schools offers personalized academic and emotional support for students of all ages, ensuring every learner achieves their full potential through tailored strategies and dedicated resources.</p>
                     <ul>
                       <li>Individualized learning plans</li>
                       <li>Specialized tutoring and counseling</li>
@@ -448,7 +448,7 @@
               <div class="stats-content">
                 <span class="subtitle">By The Numbers</span>
                 <h2>Our Academic Excellence</h2>
-                <p>Breinitoch Schools is committed to academic rigor and student success, with a curriculum designed to empower students to excel in a global society.</p>
+                <p>Brenitoch Schools is committed to academic rigor and student success, with a curriculum designed to empower students to excel in a global society.</p>
                 <a href="about.html" class="btn-about">About Our Institution</a>
               </div>
             </div>
@@ -507,13 +507,13 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Breinitoch Schools</span>
+            <span class="sitename">Brenitoch Schools</span>
           </a>
           <div class="footer-contact pt-3">
             <p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@breinitochschools.com</span></p>
+            <p><strong>Email:</strong> <span>info@Brenitochschools.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -569,7 +569,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Breinitoch Schools</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch Schools</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
