--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Index - Brenitoch</title>
+	<title>Home - Brenitoch</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 
@@ -122,7 +122,7 @@
 					<div class="row align-items-center">
 						<div class="col-lg-7" data-aos="zoom-out" data-aos-delay="100">
 							<div class="hero-content">
-								<h1>Welcome to Breinitoch Schools</h1>
+								<h1>Welcome to Brenitoch Schools</h1>
 								<p>Applications for the Next intake are on.</p>
 								<div class="cta-buttons">
 									<a href="#" class="btn-primary">Apply Now</a>
@@ -873,7 +873,7 @@
 		</div>
 
 		<div class="container copyright text-center mt-4">
-			<p>© <span>Copyright</span> <strong class="px-1 sitename">Breinitoch</strong> <span>All Rights
+			<p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch</strong> <span>All Rights
 					Reserved</span></p>
 			<div class="credits">
 				<!-- All the links in the footer should remain intact. -->
