--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Brenitoch</title>
+  <title>Home - Brenitoch</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -126,7 +126,7 @@
           <div class="row align-items-center">
             <div class="col-lg-7" data-aos="zoom-out" data-aos-delay="100">
               <div class="hero-content">
-                <h1>Welcome to Breinitoch Schools</h1>
+                <h1>Welcome to Brenitoch Schools</h1>
                 <p>Applications for the Next intake are on.</p>
                 <div class="cta-buttons">
                   <a href="admissions.html" class="btn-primary">Apply Now</a>
