--- a/students-life.html
+++ b/students-life.html
@@ -1,94 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Home - Brenitoch</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Home - Brenitoch</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
-	<!-- Favicons -->
-	<link href="assets/img/logoo.png" rel="icon">
-	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Favicons -->
+  <link href="assets/img/logoo.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-	<!-- Fonts -->
-	<link href="https://fonts.googleapis.com" rel="preconnect">
-	<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-		rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
-	<!-- Vendor CSS Files -->
-	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-	<link href="assets/vendor/aos/aos.css" rel="stylesheet">
-	<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-	<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-	<!-- Main CSS File -->
-	<link href="assets/css/main.css" rel="stylesheet">
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
 
 <body class="students-life-page">
 
- <header id="header" class="header d-flex align-items-center fixed-top">
-		<div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-			<a href="index.html" class="logo d-flex align-items-center">
-				<!-- Uncomment the line below if you also wish to use an image logo -->
-				<img src="assets/img/logoo.png" alt="School Logo">
-			</a>
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="assets/img/logoo.png" alt="School Logo">
+      </a>
 
-			<nav id="navmenu" class="navmenu">
-				<ul>
-					<li><a href="index.html" class="active">Home</a></li>
-					<li class="dropdown"><a href="about.html"><span>About</span> <i
-								class="bi bi-chevron-down toggle-dropdown"></i></a>
-						<ul>
-							<li><a href="about.html">About Us</a></li>
-							<li><a href="students-life.html">Student Clubs and Organizations</a></li>
-							<li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
-							<li><a href="campus-facilities.html">Co-curricular Programs</a></li>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li class="dropdown"><a href="about.html"><span>About</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="students-life.html">Student Clubs and Organizations</a></li>
+              <li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
+              <li><a href="campus-facilities.html">Co-curricular Programs</a></li>
 
-						</ul>
-					</li>
+            </ul>
+          </li>
 
-					<li><a href="admissions.html">Admissions</a></li>
-					<li><a href="academics.html">Academics</a></li>
-					<li><a href="events.html">Events</a></li>
-					<li><a href="alumni.html">Alumni</a></li>
-					<li><a href="employ.html">Employment</a></li>
-					<li class="dropdown"><a href="#"><span>More Pages</span> <i
-								class="bi bi-chevron-down toggle-dropdown"></i></a>
-						<ul>
-							<li><a href="news-details.html">Career Services</a></li>
-							<li><a href="news-details.html">Blog</a></li>
-							<li><a href="event-details.html">Student Accommodation Info</a></li>
-							<li><a href="privacy.html">Financial Aid and Scholarships</a></li>
-							<li><a href="terms-of-service.html">Portal Login</a></li>
-							<li><a href="community.html">Community Engagement</a></li>
-							<li><a href="news.html">News</a></li>
-							<li><a href="feedback.html">Feedback and Surveys</a></li>
-						</ul>
-					</li>
+          <li><a href="admissions.html">Admissions</a></li>
+          <li><a href="academics.html">Academics</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="alumni.html">Alumni</a></li>
+          <li><a href="employ.html">Employment</a></li>
+          <li class="dropdown"><a href="#"><span>More Pages</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="news-details.html">Career Services</a></li>
+              <li><a href="news-details.html">Blog</a></li>
+              <li><a href="event-details.html">Student Accommodation Info</a></li>
+              <li><a href="privacy.html">Financial Aid and Scholarships</a></li>
+              <li><a href="terms-of-service.html">Portal Login</a></li>
+              <li><a href="community.html">Community Engagement</a></li>
+              <li><a href="news.html">News</a></li>
+              <li><a href="feedback.html">Feedback and Surveys</a></li>
+            </ul>
+          </li>
 
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-				<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-			</nav>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
 
-		</div>
-	</header>
+    </div>
+  </header>
 
 
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background position-relative" style="background-image: url(assets/img/education/showcase-1.webp);">
+    <div class="page-title dark-background position-relative"
+      style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
         <h1>Student Life</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
+        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
+          molestias.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -107,7 +110,8 @@
         <div class="students-life-banner" data-aos="zoom-in" data-aos-delay="200">
           <div class="banner-content" data-aos="fade-right" data-aos-delay="300">
             <h2>Experience Campus Life</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis lacus vel augue laoreet rutrum
+              faucibus dolor auctor.</p>
           </div>
           <img src="assets/img/education/showcase-2.webp" alt="Campus Life" class="img-fluid">
         </div>
@@ -161,22 +165,28 @@
         <div class="students-life-tabs mt-5" data-aos="fade-up" data-aos-delay="200">
           <ul class="nav nav-pills mb-4 justify-content-center" id="studentLifeTabs" role="tablist">
             <li class="nav-item" role="presentation">
-              <button class="nav-link active" id="clubs-tab" data-bs-toggle="pill" data-bs-target="#students-life-clubs" type="button" role="tab" aria-controls="clubs" aria-selected="true">
+              <button class="nav-link active" id="clubs-tab" data-bs-toggle="pill" data-bs-target="#students-life-clubs"
+                type="button" role="tab" aria-controls="clubs" aria-selected="true">
                 <i class="bi bi-people"></i> Clubs &amp; Organizations
               </button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="athletics-tab" data-bs-toggle="pill" data-bs-target="#students-life-athletics" type="button" role="tab" aria-controls="athletics" aria-selected="false">
+              <button class="nav-link" id="athletics-tab" data-bs-toggle="pill"
+                data-bs-target="#students-life-athletics" type="button" role="tab" aria-controls="athletics"
+                aria-selected="false">
                 <i class="bi bi-trophy"></i> Athletics
               </button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="facilities-tab" data-bs-toggle="pill" data-bs-target="#students-life-facilities" type="button" role="tab" aria-controls="facilities" aria-selected="false">
+              <button class="nav-link" id="facilities-tab" data-bs-toggle="pill"
+                data-bs-target="#students-life-facilities" type="button" role="tab" aria-controls="facilities"
+                aria-selected="false">
                 <i class="bi bi-building"></i> Campus Facilities
               </button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="support-tab" data-bs-toggle="pill" data-bs-target="#students-life-support" type="button" role="tab" aria-controls="support" aria-selected="false">
+              <button class="nav-link" id="support-tab" data-bs-toggle="pill" data-bs-target="#students-life-support"
+                type="button" role="tab" aria-controls="support" aria-selected="false">
                 <i class="bi bi-shield-check"></i> Support Services
               </button>
             </li>
@@ -199,7 +209,9 @@
                 <div class="col-lg-7" data-aos="fade-left" data-aos-delay="300">
                   <div class="tab-content-text">
                     <h3>Join a Community That Shares Your Interests</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel sapien eget urna pellentesque fringilla. Suspendisse potenti. Vivamus aliquam in nisi non consectetur. Donec facilisis convallis ultrices.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel sapien eget urna
+                      pellentesque fringilla. Suspendisse potenti. Vivamus aliquam in nisi non consectetur. Donec
+                      facilisis convallis ultrices.</p>
 
                     <div class="row g-3 mt-4">
                       <div class="col-md-6">
@@ -262,7 +274,9 @@
               <div class="row g-4 mb-4 align-items-center">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
                   <h3>Athletics &amp; Recreation Programs</h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                    anim id est laborum.</p>
                   <a href="#" class="btn btn-explore">View Athletics Calendar <i class="bi bi-arrow-right"></i></a>
                 </div>
 
@@ -325,7 +339,8 @@
 
                   <div class="swiper-slide">
                     <div class="sport-card">
-                      <img src="assets/img/education/activities-4.webp" class="img-fluid" loading="lazy" alt="Basketball">
+                      <img src="assets/img/education/activities-4.webp" class="img-fluid" loading="lazy"
+                        alt="Basketball">
                       <div class="sport-info">
                         <h5>Basketball</h5>
                         <div class="badge">Varsity</div>
@@ -355,7 +370,8 @@
 
                   <div class="swiper-slide">
                     <div class="sport-card">
-                      <img src="assets/img/education/activities-10.webp" class="img-fluid" loading="lazy" alt="Volleyball">
+                      <img src="assets/img/education/activities-10.webp" class="img-fluid" loading="lazy"
+                        alt="Volleyball">
                       <div class="sport-info">
                         <h5>Volleyball</h5>
                         <div class="badge">Varsity</div>
@@ -392,7 +408,8 @@
                 <div class="col-lg-4" data-aos="fade-left" data-aos-delay="300">
                   <div class="facilities-info">
                     <h3>Modern Campus Facilities</h3>
-                    <p>Cras mattis consectetur purus sit amet fermentum. Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                    <p>Cras mattis consectetur purus sit amet fermentum. Maecenas faucibus mollis interdum. Aenean
+                      lacinia bibendum nulla sed consectetur.</p>
 
                     <div class="facilities-list">
                       <div class="facility-item">
@@ -446,7 +463,8 @@
                       <i class="bi bi-briefcase"></i>
                     </div>
                     <h5>Career Services</h5>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vivamus sagittis lacus vel augue.</p>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vivamus sagittis lacus vel augue.
+                    </p>
                     <a href="#" class="service-link">Learn More <i class="bi bi-arrow-right"></i></a>
                   </div>
                 </div>
@@ -479,7 +497,8 @@
                   <div class="contact-info-box">
                     <h4>Need Assistance?</h4>
                     <p>Our student support team is available Monday through Friday, 8am to 5pm.</p>
-                    <a href="#" class="btn btn-explore mt-2">Contact Student Services <i class="bi bi-arrow-right"></i></a>
+                    <a href="#" class="btn btn-explore mt-2">Contact Student Services <i
+                        class="bi bi-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -548,7 +567,8 @@
             <div class="row align-items-center">
               <div class="col-lg-8" data-aos="fade-right" data-aos-delay="300">
                 <h3>Ready to Join Our Community?</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius felis nec sem viverra, nec tincidunt felis mollis.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius felis nec sem viverra, nec
+                  tincidunt felis mollis.</p>
               </div>
               <div class="col-lg-4" data-aos="fade-left" data-aos-delay="400">
                 <div class="cta-buttons">
@@ -649,7 +669,8 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
