--- a/academics.html
+++ b/academics.html
@@ -47,7 +47,7 @@
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="students-life.html">Student Clubs and Organizations</a></li>
+              <li><a href="students-life.html">Student Life</a></li>
               <li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
               <li><a href="campus-facilities.html">Co-curricular Programs</a></li>
             </ul>
