--- a/campus-facilities.html
+++ b/campus-facilities.html
@@ -48,7 +48,7 @@
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="students-life.html">Student Clubs and Organizations</a></li>
+              <li><a href="students-life.html">Student Life</a></li>
               <li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
               <li><a href="campus-facilities.html">Co-curricular Programs</a></li>
 
@@ -87,13 +87,13 @@
     <!-- Page Title -->
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
-        <h1>Campus &amp; Facilities</h1>
+        <h1>School &amp; Facilities</h1>
         <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
           molestias.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Campus Facilities</li>
+            <li class="current">School's Facilities</li>
           </ol>
         </nav>
       </div>
@@ -109,7 +109,7 @@
           <div class="row align-items-center">
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
               <div class="intro-content">
-                <h2 class="fw-bold">Experience Our Campus</h2>
+                <h2 class="fw-bold">Experience Our School</h2>
                 <p class="lead">Discover state-of-the-art facilities designed to inspire learning and growth</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin scelerisque magna vitae eros faucibus,
                   vitae finibus massa pharetra. Nullam egestas dolor in condimentum faucibus.</p>
@@ -419,8 +419,8 @@
           <div class="row align-items-center">
             <div class="col-lg-5" data-aos="fade-right" data-aos-delay="100">
               <div class="map-info">
-                <h2>Campus Map</h2>
-                <p>Navigate our expansive campus with ease using our interactive map. Locate buildings, facilities, and
+                <h2>School Map</h2>
+                <p>Navigate our expansive school with ease using our interactive map. Locate buildings, facilities, and
                   services to find your way around.</p>
                 <div class="map-legend">
                   <div class="legend-item">
@@ -465,69 +465,75 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative dark-background">
+  <!--Footer details here-->
 
+  <footer id="footer" class="footer position-relative dark-background">
     <div class="container footer-top">
       <div class="row gy-4">
+
+        <!-- About / Contact -->
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">NiceSchool</span>
+            <img src="assets/img/logoo.png" alt="Brenitoch School Logo">
+            <span class="sitename ms-2">Brenitoch School</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Brenitoch School, Juja</p>
+            <p>Kiambu County, Kenya</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
+            <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter-x"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
+        <!-- Useful Links -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Quick Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="admissions.html">Admissions</a></li>
+            <li><a href="academics.html">Academics</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
 
+        <!-- Academics -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Academics</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="faculty-staff.html">Faculty & Staff</a></li>
+            <li><a href="campus-facilities.html">Campus Facilities</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="community.html">Community Engagement</a></li>
+            <li><a href="news.html">News & Updates</a></li>
           </ul>
         </div>
 
+        <!-- Resources -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
+          <h4>Resources</h4>
           <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="portal.html">Portal Login</a></li>
+            <li><a href="alumni.html">Alumni</a></li>
           </ul>
         </div>
 
+        <!-- Support -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
+          <h4>Support</h4>
           <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
+            <li><a href="financial-aid.html">Financial Aid</a></li>
+            <li><a href="career-services.html">Career Services</a></li>
+            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
 
@@ -535,16 +541,10 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">MyWebsite</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
+          Reserved</span></p>
 
+    </div>
   </footer>
 
   <!-- Scroll Top -->
