--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								class="bi bi-chevron-down toggle-dropdown"></i></a>
 						<ul>
 							<li><a href="about.html">About Us</a></li>
-							<li><a href="students-life.html">Student Clubs and Organizations</a></li>
+							<li><a href="students-life.html">Student Life</a></li>
 							<li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
 							<li><a href="campus-facilities.html">Co-curricular Programs</a></li>
 
@@ -741,6 +741,8 @@
 		<!-- /Stats Section -->
 
 	</main>
+
+	<!--Footer implementation here-->
 
 	<footer id="footer" class="footer position-relative dark-background">
 		<div class="container footer-top">
