--- a/students-life.html
+++ b/students-life.html
@@ -48,7 +48,7 @@
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="students-life.html">Student Clubs and Organizations</a></li>
+              <li><a href="students-life.html">Student Life</a></li>
               <li><a href="faculty-staff.html">Faculty &amp; Staff</a></li>
               <li><a href="campus-facilities.html">Co-curricular Programs</a></li>
 
@@ -90,8 +90,10 @@
       style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
         <h1>Student Life</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
-          molestias.</p>
+        <p>
+          At Brenitoch, student life is a dynamic blend of learning, creativity, and growth—where every experience
+          inspires excellence and lasting connections.
+        </p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -109,9 +111,10 @@
         <!-- Hero Banner -->
         <div class="students-life-banner" data-aos="zoom-in" data-aos-delay="200">
           <div class="banner-content" data-aos="fade-right" data-aos-delay="300">
-            <h2>Experience Campus Life</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis lacus vel augue laoreet rutrum
-              faucibus dolor auctor.</p>
+            <h2>Experience the School Life</h2>
+            <p>
+              Experience a vibrant school life filled with learning, creativity, and lasting friendships.
+            </p>
           </div>
           <img src="assets/img/education/showcase-2.webp" alt="Campus Life" class="img-fluid">
         </div>
@@ -125,7 +128,7 @@
                   <i class="bi bi-people-fill"></i>
                 </div>
                 <h4>Clubs</h4>
-                <p>50+ Organizations</p>
+                <p>10+ Organizations</p>
               </div>
             </div>
 
@@ -145,7 +148,7 @@
                   <i class="bi bi-calendar-event"></i>
                 </div>
                 <h4>Events</h4>
-                <p>200+ Annual Events</p>
+                <p>10+ Annual Events</p>
               </div>
             </div>
 
@@ -181,7 +184,7 @@
               <button class="nav-link" id="facilities-tab" data-bs-toggle="pill"
                 data-bs-target="#students-life-facilities" type="button" role="tab" aria-controls="facilities"
                 aria-selected="false">
-                <i class="bi bi-building"></i> Campus Facilities
+                <i class="bi bi-building"></i> School Facilities
               </button>
             </li>
             <li class="nav-item" role="presentation">
@@ -200,7 +203,7 @@
                   <div class="tab-content-image">
                     <img src="assets/img/education/students-2.webp" alt="Student Clubs" class="img-fluid rounded">
                     <div class="stat-badge">
-                      <span class="number">50+</span>
+                      <span class="number">10+</span>
                       <span class="text">Active Clubs</span>
                     </div>
                   </div>
@@ -209,9 +212,10 @@
                 <div class="col-lg-7" data-aos="fade-left" data-aos-delay="300">
                   <div class="tab-content-text">
                     <h3>Join a Community That Shares Your Interests</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel sapien eget urna
-                      pellentesque fringilla. Suspendisse potenti. Vivamus aliquam in nisi non consectetur. Donec
-                      facilisis convallis ultrices.</p>
+                    <p>
+                      Let your child experience the school life where curiosity meets opportunity. We let them
+                      Learn, Explore, and Thrive in a community that supports their dreams.
+                    </p>
 
                     <div class="row g-3 mt-4">
                       <div class="col-md-6">
@@ -329,7 +333,8 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="sport-card">
-                      <img src="assets/img/education/activities-2.webp" class="img-fluid" loading="lazy" alt="Swimming">
+                      <img src="assets/img/education/athletics/swimming.jpeg" class="img-fluid" loading="lazy"
+                        alt="Swimming">
                       <div class="sport-info">
                         <h5>Swimming</h5>
                         <div class="badge">Varsity</div>
@@ -339,7 +344,7 @@
 
                   <div class="swiper-slide">
                     <div class="sport-card">
-                      <img src="assets/img/education/activities-4.webp" class="img-fluid" loading="lazy"
+                      <img src="assets/img/education/athletics/basketball.jpeg" class="img-fluid" loading="lazy"
                         alt="Basketball">
                       <div class="sport-info">
                         <h5>Basketball</h5>
@@ -350,7 +355,8 @@
 
                   <div class="swiper-slide">
                     <div class="sport-card">
-                      <img src="assets/img/education/activities-6.webp" class="img-fluid" loading="lazy" alt="Soccer">
+                      <img src="assets/img/education/athletics/football-leg.jpeg" class="img-fluid" loading="lazy"
+                        alt="Soccer">
                       <div class="sport-info">
                         <h5>Soccer</h5>
                         <div class="badge">Varsity</div>
@@ -360,7 +366,8 @@
 
                   <div class="swiper-slide">
                     <div class="sport-card">
-                      <img src="assets/img/education/activities-8.webp" class="img-fluid" loading="lazy" alt="Tennis">
+                      <img src="assets/img/education/athletics/tennis.jpeg" class="img-fluid" loading="lazy"
+                        alt="Tennis">
                       <div class="sport-info">
                         <h5>Tennis</h5>
                         <div class="badge">Varsity</div>
@@ -370,7 +377,7 @@
 
                   <div class="swiper-slide">
                     <div class="sport-card">
-                      <img src="assets/img/education/activities-10.webp" class="img-fluid" loading="lazy"
+                      <img src="assets/img/education/athletics/volleyball.jpeg" class="img-fluid" loading="lazy"
                         alt="Volleyball">
                       <div class="sport-info">
                         <h5>Volleyball</h5>
@@ -407,7 +414,7 @@
 
                 <div class="col-lg-4" data-aos="fade-left" data-aos-delay="300">
                   <div class="facilities-info">
-                    <h3>Modern Campus Facilities</h3>
+                    <h3>Modern School Facilities</h3>
                     <p>Cras mattis consectetur purus sit amet fermentum. Maecenas faucibus mollis interdum. Aenean
                       lacinia bibendum nulla sed consectetur.</p>
 
@@ -509,23 +516,24 @@
         <!-- Student Life Gallery -->
         <div class="students-life-gallery mt-5" data-aos="fade-up" data-aos-delay="200">
           <div class="section-header text-center">
-            <h3>Life on Campus</h3>
+            <h3>Life at School</h3>
             <p>Take a glimpse into our vibrant student community</p>
           </div>
 
           <div class="row g-3">
             <div class="col-md-4" data-aos="zoom-in" data-aos-delay="100">
-              <a href="assets/img/education/students-1.webp" class="gallery-item glightbox">
-                <img src="assets/img/education/students-1.webp" class="img-fluid" loading="lazy" alt="Student Life">
+              <a href="assets/img/education/school-events.jpeg" class="gallery-item glightbox">
+                <img src="assets/img/education/school-events.jpeg" class="img-fluid" loading="lazy" alt="Student Life">
                 <div class="gallery-overlay">
-                  <span>Campus Events</span>
+                  <span>School Events</span>
                 </div>
               </a>
             </div>
 
             <div class="col-md-4" data-aos="zoom-in" data-aos-delay="200">
-              <a href="assets/img/education/students-2.webp" class="gallery-item glightbox">
-                <img src="assets/img/education/students-2.webp" class="img-fluid" loading="lazy" alt="Student Life">
+              <a href="assets/img/education/athletics/chess.jpeg" class="gallery-item glightbox">
+                <img src="assets/img/education/athletics/chess.jpeg" class="img-fluid" loading="lazy"
+                  alt="Student Life">
                 <div class="gallery-overlay">
                   <span>Student Clubs</span>
                 </div>
@@ -533,8 +541,8 @@
             </div>
 
             <div class="col-md-4" data-aos="zoom-in" data-aos-delay="300">
-              <a href="assets/img/education/students-3.webp" class="gallery-item glightbox">
-                <img src="assets/img/education/students-3.webp" class="img-fluid" loading="lazy" alt="Student Life">
+              <a href="assets/img/education/graduation.jpeg" class="gallery-item glightbox">
+                <img src="assets/img/education/graduation.jpeg" class="img-fluid" loading="lazy" alt="Student Life">
                 <div class="gallery-overlay">
                   <span>Graduation Day</span>
                 </div>
@@ -542,8 +550,8 @@
             </div>
 
             <div class="col-md-6" data-aos="zoom-in" data-aos-delay="400">
-              <a href="assets/img/education/students-4.webp" class="gallery-item glightbox">
-                <img src="assets/img/education/students-4.webp" class="img-fluid" loading="lazy" alt="Student Life">
+              <a href="assets/img/education/study-groups.jpeg" class="gallery-item glightbox">
+                <img src="assets/img/education/study-groups.jpeg" class="img-fluid" loading="lazy" alt="Student Life">
                 <div class="gallery-overlay">
                   <span>Study Groups</span>
                 </div>
@@ -551,10 +559,10 @@
             </div>
 
             <div class="col-md-6" data-aos="zoom-in" data-aos-delay="500">
-              <a href="assets/img/education/students-5.webp" class="gallery-item glightbox">
-                <img src="assets/img/education/students-5.webp" class="img-fluid" loading="lazy" alt="Student Life">
+              <a href="assets/img/education/lab-facility.jpeg" class="gallery-item glightbox">
+                <img src="assets/img/education/lab-facility.jpeg" class="img-fluid" loading="lazy" alt="Student Life">
                 <div class="gallery-overlay">
-                  <span>Campus Facilities</span>
+                  <span>School Facilities</span>
                 </div>
               </a>
             </div>
@@ -567,8 +575,10 @@
             <div class="row align-items-center">
               <div class="col-lg-8" data-aos="fade-right" data-aos-delay="300">
                 <h3>Ready to Join Our Community?</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius felis nec sem viverra, nec
-                  tincidunt felis mollis.</p>
+                <p>
+                  Step into a school community that celebrates every student’s potential.
+                  Discover, learn, and grow with us at Brenitoch.
+                </p>
               </div>
               <div class="col-lg-4" data-aos="fade-left" data-aos-delay="400">
                 <div class="cta-buttons">
@@ -586,69 +596,75 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative dark-background">
+  <!--Footer implementation here-->
 
+  <footer id="footer" class="footer position-relative dark-background">
     <div class="container footer-top">
       <div class="row gy-4">
+
+        <!-- About / Contact -->
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">NiceSchool</span>
+            <img src="assets/img/logoo.png" alt="Brenitoch School Logo">
+            <span class="sitename ms-2">Brenitoch School</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Brenitoch School, Juja</p>
+            <p>Kiambu County, Kenya</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+254 712 345 678</span></p>
+            <p><strong>Email:</strong> <span>info@brenitoch.ac.ke</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter-x"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
+        <!-- Useful Links -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Quick Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="admissions.html">Admissions</a></li>
+            <li><a href="academics.html">Academics</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
 
+        <!-- Academics -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Academics</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="faculty-staff.html">Faculty & Staff</a></li>
+            <li><a href="campus-facilities.html">Campus Facilities</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="community.html">Community Engagement</a></li>
+            <li><a href="news.html">News & Updates</a></li>
           </ul>
         </div>
 
+        <!-- Resources -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
+          <h4>Resources</h4>
           <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="portal.html">Portal Login</a></li>
+            <li><a href="alumni.html">Alumni</a></li>
           </ul>
         </div>
 
+        <!-- Support -->
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
+          <h4>Support</h4>
           <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
+            <li><a href="financial-aid.html">Financial Aid</a></li>
+            <li><a href="career-services.html">Career Services</a></li>
+            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
 
@@ -656,16 +672,10 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">MyWebsite</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Brenitoch School</strong> <span>All Rights
+          Reserved</span></p>
 
+    </div>
   </footer>
 
   <!-- Scroll Top -->
